<?xml version="1.0"?>
<package format="2">
  <name>lidar_camera_fusion</name>
  <version>0.0.0</version>
  <description>The lidar_camera_fusion package</description>
  <maintainer email="edison.velasco@ua.es">epvs</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>cv_bridge</build_depend>
  <build_depend>eigen_conversions</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>message_filters</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>velodyne_pointcloud</build_depend>
  <build_depend>libpcl-all-dev</build_depend>
  <build_depend>libopencv-dev</build_depend>
  <build_depend>libboost-all-dev</build_depend>
  <build_depend>libarmadillo-dev</build_depend>

  <build_export_depend>cv_bridge</build_export_depend>
  <build_export_depend>eigen_conversions</build_export_depend>
  <build_export_depend>image_transport</build_export_depend>
  <build_export_depend>message_filters</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>tf</build_export_depend>

  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>eigen_conversions</exec_depend>
  <exec_depend>image_transport</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>message_filters</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>tf</exec_depend>
  <exec_depend>velodyne_pointcloud</exec_depend>
  <exec_depend>libpcl-all</exec_depend>
  <exec_depend>libopencv-dev</exec_depend>
  <exec_depend>libboost-all-dev</exec_depend>
  <exec_depend>libarmadillo-dev</exec_depend>

  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>
</package>
